# Behemoth

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/behemoth/: __init__.py  __main__.py  cli.py  core.py
src/behemoth/agents/: __init__.py  alchemist.py  berserker.py  paladin.py  warlock.py
src/behemoth/utils/: dashboard.py  router.py  scanner.py  scryer.py
tests/: final_strike.json
